--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "candlestick-with-rsi",
-  "homepage": "http://weec0008.github.io/candlestick-with-rsi",
+  "homepage": "https://weec0008.github.io/candlestick-with-rsi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
