--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3-dsv": "^1.0.10",
+    "d3-format": "^1.3.2",
+    "d3-scale": "^2.1.2",
+    "d3-time-format": "^2.1.3",
+    "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-stockcharts": "^0.7.8",
+    "save-svg-as-png": "^1.4.6",
+    "shortid": "^2.2.13"
   },
   "scripts": {
     "start": "react-scripts start",
